www/css/main.css
/* Reset */

body {
  font-family: "Roboto", sans-serif;
  margin: 0;
}

main {
  display: flex;
}

/* Main Styles */

.close {
  font-size: 24px;
  font-weight: normal;
  color: #888;
  cursor: pointer;
}

.collapsed {
  transition: margin-right 0.3s;
  margin-right: -256px;
}

.controls {
  display: flex;
  align-items: center;
  position: absolute;
  right: 24;
  top: 0;
}

.edit {
  color: #999;
  font-weight: 600;
  font-size: 14px;
  text-transform: uppercase;
  border: 1px solid #999;
  display: block;
  height: 30px;
  width: 80px;
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 6px;
  cursor: pointer;
}

.input-container {
  padding: 24px 16px;
  border-bottom: 1px solid #dedede;
}

.input-container:last-of-type {
  border-bottom: none;
}

.input-container-title.label {
  color: #444;
  margin-bottom: 24px;
}

#textCanvas {
  display: none;
}

.canvas-container {
  flex: 1 1 auto;
  display: flex;
  justify-content: center;
  align-items: center;
  width: calc(100vw - 256px - 66px);
  position: relative;
}

.input {
  margin-bottom: 20px;
}

.input.checkbox {
  display: flex;
  align-items: center;
  margin-left: -12px;
  margin-bottom: 0;
}

.input.checkbox .label {
  margin-bottom: 0;
}

.input:last-of-type {
  margin-bottom: 0;
}

.label {
  color: #888;
  font-size: 14px;
  font-weight: bold;
  margin-bottom: 12px;
}

.label.slider {
  margin-bottom: 0;
}

.slider-container {
  display: flex;
  align-items: center;
}

.slider-manual-input {
  font-family: "Roboto", sans-serif;
  width: 30px;
  border-width: 0 0 1px 0;
  margin-left: 8px;
  outline: none;
  text-align: center;
  padding-bottom: 4px;
  font-size: 14px;
  border-color: rgba(0, 0, 0, 0.14);
  transition: border-color 0.3s;
}

.slider-manual-input:hover {
  border-color: rgba(0, 0, 0, 0.87);
  transition: border-color 0.3s;
}

.color {
  height: 20px;
  width: 20px;
  margin: 0 10px 20px 0;
  background: red;
  border-radius: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
}

.color.selected:after {
  content: "\2714";
  font-size: 12px;
}

.colorOptions {
  display: flex;
}

.about {
  border-radius: 50%;
  height: 15px;
  width: 15px;
  font-size: 12px;
  display: block;
  text-align: center;
  display: flex;
  align-items: center;
  justify-content: center;
  text-decoration: none;
  border: 1.5px solid #616161;
  color: #616161;
  font-weight: bold;
  margin: 20px 24px;
  cursor: pointer;
}

.hidden {
  display: none;
}

input[type="number"]::-webkit-outer-spin-button,
input[type="number"]::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

input[type="number"] {
  -moz-appearance: textfield;
}

/* Loader styles */

.loader {
  z-index: 999;
  position: fixed;
  top: 0;
  left: 0;
  height: 100vh;
  width: 100vw;
  background: rgba(256, 256, 256, 0.9);
  display: flex;
  justify-content: center;
  align-items: center;
}

.spinner {
  animation: rotator 1.4s linear infinite;
}
@keyframes rotator {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(270deg);
  }
}
.path {
  stroke-dasharray: 187;
  stroke-dashoffset: 90;
  transform-origin: center;
  stroke: #4285f4;
  animation: dash 1.4s ease-in-out infinite;
}
@keyframes dash {
  0% {
    transform: rotate(0deg);
  }
  50% {
    transform: rotate(135deg);
  }
  100% {
    transform: rotate(450deg);
  }
}

/* MDC Overrides */

.mdc-drawer {
  height: 100%;
  min-height: 100vh;
  border-left: 1px solid #dedede;
  transition: margin-right 0.3s;
}

.mdc-drawer__header {
  border-bottom: 1px solid #dedede;
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  font-size: 16px;
  font-weight: bold;
}

.mdc-text-field.mdc-text-field--outlined.mdc-text-field--no-label {
  height: 36px;
}

.mdc-text-field--outlined .mdc-text-field__input {
  padding: 16px;
  font-size: 14px;
}

.mdc-select {
  width: 100%;
}

.mdc-select--outlined .mdc-select__native-control {
  padding: 0;
  height: 36px;
  font-size: 14px;
}

.mdc-select--outlined {
  display: flex;
  align-items: center;
  height: 36px;
}

.mdc-select__dropdown-icon {
  bottom: auto;
}

.mdc-select.mdc-select--outlined .mdc-select__native-control {
  padding-left: 16px;
  border: 1px solid rgba(0, 0, 0, 0.28);
  transition: border 0.3s;
}

.mdc-select.mdc-select--outlined .mdc-select__native-control:hover {
  border: 1px solid rgba(0, 0, 0, 0.87);
  transition: border 0.3s;
}

.mdc-text-field {
  width: 100%;
}

.mdc-checkbox {
  margin: -11px 0;
}

